# api-skabelonmotor

./: .env.example  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.remote.yml  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: condition_handler.py  letter_creation.py  letter_handler.py  templates_handler.py
app/utils/: database.py  helper_functions.py
